// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TourPage with correct API response displays hotel details 1`] = `
<DocumentFragment>
  <header
    class="sc-bdvvtL kSlYyk"
  >
    <section
      class="sc-eCImPb dskChN"
    >
      <a
        class=""
        href="/"
      >
        <img
          alt="logo image"
          class="sc-hKwDye eYBWIV"
          src="logo.svg"
        />
      </a>
      <nav
        class="sc-gsDKAQ bAkjkz"
      >
        <a
          class="sc-dkPtRN cMHRyC"
          href="/about"
        >
          About us
        </a>
        <a
          class="sc-dkPtRN cMHRyC"
          href="/book-tour"
        >
          Book tour
        </a>
        <a
          class="sc-dkPtRN cMHRyC"
          href="/404"
        >
          404
        </a>
      </nav>
    </section>
  </header>
  <div
    class="sc-GEbAx bnyQPd"
    data-testid="tour_details"
  >
    <section
      class="sc-eCImPb sc-fWCJzd dskChN kwJKmZ"
      data-testid="tour_details"
    >
      <div
        class="sc-clIzBv briFuw"
      >
        <button
          class="sc-Galmp exLVkH"
        >
          ← Back
        </button>
        <a
          class="sc-faUpoM bcbDck"
          href="/"
        >
          Tours
        </a>
         / 
        <a
          class="sc-faUpoM bcbDck"
          href="/tours/12345"
        >
          Candlewood Suites Galvest...
        </a>
         / 
      </div>
      <section
        class="sc-dvQaRk cGyGES"
      >
        <div
          class="sc-jIkXHa bKella"
        >
          <h1
            class="sc-jOxtWs gCUsFv"
          >
            Candlewood Suites Galveston, an IHG Hotel
          </h1>
          <span
            class="sc-hmjpVf dcEkvA"
          >
            <b>
              Hotel with outdoor pool, near Moody Gardens 
            </b>
          </span>
        </div>
        <p
          class="sc-eLwHnm iqOKBU"
        >
          808 61st St, Galveston, TX, 77551, United States of America
        </p>
        <div
          class="sc-ZOtfp erSvxk"
        >
          <img
            class="sc-bTfYFJ jTxfRF"
            src="https://exp.cdn-hotels.com/hotels/2000000/1990000/1988100/1988040/a32e4d89_z.jpg"
          />
          <div
            class="sc-kHOZwM bfeloR"
          >
            <ul
              class="sc-giYglK bkJEMY"
            >
              <li
                class="sc-ezbkAF cDSUtC"
              >
                <img
                  class="sc-bYoBSM dTBcIh"
                  src="[object Object]"
                />
                2.5 stars
              </li>
              <li
                class="sc-ezbkAF cDSUtC"
              >
                <img
                  class="sc-bYoBSM dTBcIh"
                  src="[object Object]"
                />
                $89 
              </li>
              <li
                class="sc-ezbkAF cDSUtC"
              >
                <img
                  class="sc-bYoBSM dTBcIh"
                  src="[object Object]"
                />
                7.2/10 
              </li>
              <li
                class="sc-ezbkAF cDSUtC"
              >
                <img
                  class="sc-bYoBSM dTBcIh"
                  src="[object Object]"
                />
                Tiki Island neighborhood
              </li>
              <li
                class="sc-ezbkAF cDSUtC"
              >
                <img
                  class="sc-bYoBSM dTBcIh"
                  src="[object Object]"
                />
                Check-in time 3 PM-10:00 PM 
              </li>
              <li
                class="sc-ezbkAF cDSUtC"
              >
                <img
                  class="sc-bYoBSM dTBcIh"
                  src="[object Object]"
                />
                Check-out time is  11 AM 
              </li>
            </ul>
          </div>
        </div>
      </section>
      <section
        class="sc-dvQaRk cGyGES"
      >
        <h2
          class="sc-TBWPX cPcIzM"
        >
          Amenities
        </h2>
        <div
          class="sc-jUosCB fcYQXD"
        >
          <div>
            <h3
              class="sc-jQrDum bpwzsP"
            >
              In the hotel
            </h3>
            <ul
              class="sc-fvxzrP eSSaBh"
            >
              <div>
                <h3
                  class="sc-jQrDum bpwzsP"
                >
                  Food and drink
                </h3>
                <ul
                  class="sc-fvxzrP eSSaBh"
                >
                  <li
                    class="sc-fbyfCU hcERXm"
                  >
                    Coffee/tea in a common area
                  </li>
                  <li
                    class="sc-fbyfCU hcERXm"
                  >
                    Barbecue grills
                  </li>
                </ul>
              </div>
              <div>
                <h3
                  class="sc-jQrDum bpwzsP"
                >
                  Languages Spoken
                </h3>
                <ul
                  class="sc-fvxzrP eSSaBh"
                >
                  <li
                    class="sc-fbyfCU hcERXm"
                  >
                    English
                  </li>
                  <li
                    class="sc-fbyfCU hcERXm"
                  >
                    Hindi
                  </li>
                  <li
                    class="sc-fbyfCU hcERXm"
                  >
                    Spanish
                  </li>
                  <li
                    class="sc-fbyfCU hcERXm"
                  >
                    Urdu
                  </li>
                </ul>
              </div>
            </ul>
          </div>
          <div>
            <h3
              class="sc-jQrDum bpwzsP"
            >
              In the room
            </h3>
            <ul
              class="sc-fvxzrP eSSaBh"
            >
              <div>
                <h3
                  class="sc-jQrDum bpwzsP"
                >
                  Home comforts
                </h3>
                <ul
                  class="sc-fvxzrP eSSaBh"
                >
                  <li
                    class="sc-fbyfCU hcERXm"
                  >
                    Air conditioning
                  </li>
                  <li
                    class="sc-fbyfCU hcERXm"
                  >
                    Coffee/tea maker
                  </li>
                  <li
                    class="sc-fbyfCU hcERXm"
                  >
                    Iron/ironing board
                  </li>
                </ul>
              </div>
            </ul>
          </div>
        </div>
      </section>
      <section
        class="sc-dvQaRk sc-dtMgUX cGyGES jgUVxI"
      >
        <p
          class="sc-cZMNgc dsTFMK"
        />
        <p>
          <strong>
            Pets
          </strong>
           are allowed for an extra charge of USD 75 per pet, per night
        </p>
        Service animals exempt from fees
        <p />
      </section>
    </section>
  </div>
  <footer
    class="sc-gKclnd MQsgS"
  >
    <section
      class="sc-eCImPb dskChN"
    >
      <a
        href="https://rs.school/react/"
        rel="noreferrer"
        target="_blank"
      >
        <img
          class="sc-iCfMLu cYkerD"
          src="rs_school_js.svg"
        />
      </a>
      <div
        class="sc-furwcr eVEnJl"
      >
        <a
          href="https://github.com/KatiaZakharina"
          rel="noreferrer"
          target="_blank"
        >
          Katia Zakharina
        </a>
        <span>
          2022
        </span>
      </div>
    </section>
  </footer>
</DocumentFragment>
`;

exports[`TourPage with error details API response displays error message 1`] = `
<DocumentFragment>
  <header
    class="sc-bdvvtL kSlYyk"
  >
    <section
      class="sc-eCImPb dskChN"
    >
      <a
        class=""
        href="/"
      >
        <img
          alt="logo image"
          class="sc-hKwDye eYBWIV"
          src="logo.svg"
        />
      </a>
      <nav
        class="sc-gsDKAQ bAkjkz"
      >
        <a
          class="sc-dkPtRN cMHRyC"
          href="/about"
        >
          About us
        </a>
        <a
          class="sc-dkPtRN cMHRyC"
          href="/book-tour"
        >
          Book tour
        </a>
        <a
          class="sc-dkPtRN cMHRyC"
          href="/404"
        >
          404
        </a>
      </nav>
    </section>
  </header>
  <div
    class="sc-GEbAx bnyQPd"
    data-testid="tour_details"
  >
    <div
      class="sc-kfPuZi hiYQdM"
    >
      <img
        alt="error illustration"
        class="sc-fKVqWL kTIdEB"
        src="no_connection.svg"
      />
      <div
        class="sc-bBHxTw hgVDmX"
      >
        <h2
          class="sc-iwjdpV irfMDu"
        >
          Internal Server Error
        </h2>
        <p
          class="sc-cxpSdN jljmov"
        >
          Sorry, there were some technical issues while processing yous request
        </p>
        <p
          class="sc-llYSUQ itJvmD"
        >
          ERROR CODE: 500
        </p>
      </div>
    </div>
  </div>
  <footer
    class="sc-gKclnd MQsgS"
  >
    <section
      class="sc-eCImPb dskChN"
    >
      <a
        href="https://rs.school/react/"
        rel="noreferrer"
        target="_blank"
      >
        <img
          class="sc-iCfMLu cYkerD"
          src="rs_school_js.svg"
        />
      </a>
      <div
        class="sc-furwcr eVEnJl"
      >
        <a
          href="https://github.com/KatiaZakharina"
          rel="noreferrer"
          target="_blank"
        >
          Katia Zakharina
        </a>
        <span>
          2022
        </span>
      </div>
    </section>
  </footer>
</DocumentFragment>
`;
